fix(ui): navigation alignment and software icon
!35

--- a/app/project-static/base.css
+++ b/app/project-static/base.css
@@ -288,13 +288,15 @@ nav button.collapsible {
   background-color: inherit;
   color: white;
   cursor: pointer;
-  padding: 18px;
+  padding: 0px 18px 0px 18px;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
   font-size: 15px;
   margin: 0px;
+  line-height: 50px;
+  vertical-align: middle;
 }
 
 nav button.active, .collapsible:hover {
